api service fixed

--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "youtube-clone-server",
   "version": "1.0.0",
   "description": "Backend for YouTube Clone",
-  "main": "src/index.ts",
-  "type": "module",
+  "main": "dist/index.js",
+  "type": "commonjs",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -28,6 +28,7 @@
     "nodemon": "^3.0.2",
     "prisma": "^5.7.0",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
 }
