--- a/api/package.json
+++ b/api/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "script",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node ./script.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "dependencies": {
+    "@prisma/client": "5.22.0",
+    "@types/node": "22.10.2"
+  },
   "devDependencies": {
-    "@types/node": "^22.10.2",
-    "prisma": "^6.0.1",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "prisma": "5.22.0",
+    "ts-node": "10.9.2",
+    "typescript": "5.7.2"
   }
 }
